[tool.poetry]
name = "kasa-webhook"
version = "0.1.0"
description = ""
authors = ["genzj <zj0512@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-kasa = {git = "https://github.com/python-kasa/python-kasa.git", rev = "refs/pull/1580/head", extras = ["speedups"]}
uvicorn = {version = "^0.46.0", extras = ["standard"]}
fastapi = {extras = ["standard"], version = "^0.136.1"}
pydantic-settings = "^2.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
